함수와 패키지 실습

--- a/part03/setting.ipynb
+++ b/part03/setting.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8dd4181b",
+   "metadata": {},
+   "source": [
+    "문자 앞에 특수문자를 넣으면 *기울임체*가 됨\n",
+    "\n",
+    "문자 앞뒤에 특수문자를 넣으면 **강조체**가 됨\n",
+    "\n",
+    "문자 앞뒤에 특수문자를 넣으면 ~~취소선~~을 만듬\n",
+    "\n",
+    "문자 앞뒤에 대괄호와 괄호를 넣으면 [하이퍼링크](http://www.google.com/)을 만듬\n",
+    "\n",
+    "# 1단계 제목\n",
+    "## 2단계 제목\n",
+    "### 3단계 제목 \n",
+    "#### 4단계 제목\n",
+    "\n",
+    "코드에 백틱(backtick) 기호를 입력하면 `pandas `와 같이 음영을 넣음"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "050b3f5c",
