과제 3번 풀이

--- a/part05/hw05.ipynb
+++ b/part05/hw05.ipynb
@@ -2312,6 +2312,250 @@
   },
   {
    "cell_type": "markdown",
+   "id": "add4071e",
+   "metadata": {},
+   "source": [
+    "## 03. category, city 변수를 추출해 새로운 데이터 mpg_new 생성하고 확인 ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78d131d7",
+   "metadata": {},
+   "source": [
+    "### 3-1. mpg_new 생성하기 ### "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "74c9736b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>cty</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>compact</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>compact</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>compact</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>compact</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>compact</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>229</th>\n",
+       "      <td>midsize</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>230</th>\n",
+       "      <td>midsize</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>231</th>\n",
+       "      <td>midsize</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232</th>\n",
+       "      <td>midsize</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233</th>\n",
+       "      <td>midsize</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>234 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    category  cty\n",
+       "0    compact   18\n",
+       "1    compact   21\n",
+       "2    compact   20\n",
+       "3    compact   21\n",
+       "4    compact   16\n",
+       "..       ...  ...\n",
+       "229  midsize   19\n",
+       "230  midsize   21\n",
+       "231  midsize   16\n",
+       "232  midsize   18\n",
+       "233  midsize   17\n",
+       "\n",
+       "[234 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mpg_new = mpg[['category', 'cty']]\n",
+    "mpg_new"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e838e44",
+   "metadata": {},
+   "source": [
+    "*→ category, cty 두 개의 변수만 있는 데이터 생성 (234개의 행)*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f43d9d47",
+   "metadata": {},
+   "source": [
+    "### 3-2. head()로 출력하여 확인하기 ### "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "25d9386f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>cty</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>compact</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>compact</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>compact</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>compact</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>compact</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  category  cty\n",
+       "0  compact   18\n",
+       "1  compact   21\n",
+       "2  compact   20\n",
+       "3  compact   21\n",
+       "4  compact   16"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mpg_new.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98a7a100",
+   "metadata": {},
+   "source": [
+    "*→ head()를 이용해 일부 5개만 출력하여 보다 간편하게 확인 가능*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0748307",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "a891b2f9",
    "metadata": {},
    "source": [
