과제 4번 풀이

--- a/part05/hw05.ipynb
+++ b/part05/hw05.ipynb
@@ -2315,7 +2315,7 @@
    "id": "add4071e",
    "metadata": {},
    "source": [
-    "## 03. category, city 변수를 추출해 새로운 데이터 mpg_new 생성하고 확인 ##"
+    "## 03. category, cty 변수를 추출해 새로운 데이터 mpg_new 생성하고 확인 ##"
    ]
   },
   {
@@ -2552,7 +2552,83 @@
    "cell_type": "markdown",
    "id": "f0748307",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 04. mpg_new에서 category가 suv인 자동차와 compact인 자동차의 city 평균 비교하기 ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24e7dc36",
+   "metadata": {},
+   "source": [
+    "### 4-1. category가 suv인 자동차의 cty 평균 구하기 ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a167bb15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(13.5)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mpg_new.query('category == \"suv\"')['cty'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e157da0b",
+   "metadata": {},
+   "source": [
+    "### 4-2. category가 compact인 자동차의 cty 평균 구하고 비교하기###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "17f2486a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(20.127659574468087)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mpg_new.query('category == \"compact\"')['cty'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f28b5755",
+   "metadata": {},
+   "source": [
+    "*→ category가 suv인 자동차의 cty평균은 13.5이고, compact인 자동차의 cty 평균은 약 20.1이므로 compact인 자동차의 cty 평균이 더 높다.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ca80d2e",
+   "metadata": {},
+   "source": [
+    "## 05. audi 자동차 중 hwy가 1~5위에 해당하는 데이터를 출력하기 ##"
+   ]
   },
   {
    "cell_type": "markdown",
