--- a/part05/hw05.ipynb
+++ b/part05/hw05.ipynb
@@ -1267,6 +1267,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a5ff24b",
+   "metadata": {},
+   "source": [
+    "---------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eaf50529",
    "metadata": {},
    "source": [
@@ -2312,6 +2320,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f42f6f04",
+   "metadata": {},
+   "source": [
+    "---------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "add4071e",
    "metadata": {},
    "source": [
@@ -2550,6 +2566,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae40fccc",
+   "metadata": {},
+   "source": [
+    "---------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f0748307",
    "metadata": {},
    "source": [
@@ -2624,6 +2648,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a891b2f9",
+   "metadata": {},
+   "source": [
+    "---------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ca80d2e",
    "metadata": {},
    "source": [
@@ -2631,11 +2663,143 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a891b2f9",
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f363b315",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>manufacturer</th>\n",
+       "      <th>model</th>\n",
+       "      <th>displ</th>\n",
+       "      <th>year</th>\n",
+       "      <th>cyl</th>\n",
+       "      <th>trans</th>\n",
+       "      <th>drv</th>\n",
+       "      <th>cty</th>\n",
+       "      <th>hwy</th>\n",
+       "      <th>fl</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4</td>\n",
+       "      <td>manual(m6)</td>\n",
+       "      <td>f</td>\n",
+       "      <td>20</td>\n",
+       "      <td>31</td>\n",
+       "      <td>p</td>\n",
+       "      <td>compact</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4</td>\n",
+       "      <td>auto(av)</td>\n",
+       "      <td>f</td>\n",
+       "      <td>21</td>\n",
+       "      <td>30</td>\n",
+       "      <td>p</td>\n",
+       "      <td>compact</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>4</td>\n",
+       "      <td>manual(m5)</td>\n",
+       "      <td>f</td>\n",
+       "      <td>21</td>\n",
+       "      <td>29</td>\n",
+       "      <td>p</td>\n",
+       "      <td>compact</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>4</td>\n",
+       "      <td>auto(l5)</td>\n",
+       "      <td>f</td>\n",
+       "      <td>18</td>\n",
+       "      <td>29</td>\n",
+       "      <td>p</td>\n",
+       "      <td>compact</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4 quattro</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4</td>\n",
+       "      <td>manual(m6)</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>28</td>\n",
+       "      <td>p</td>\n",
+       "      <td>compact</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  manufacturer       model  displ  year  cyl       trans drv  cty  hwy fl  \\\n",
+       "2         audi          a4    2.0  2008    4  manual(m6)   f   20   31  p   \n",
+       "3         audi          a4    2.0  2008    4    auto(av)   f   21   30  p   \n",
+       "1         audi          a4    1.8  1999    4  manual(m5)   f   21   29  p   \n",
+       "0         audi          a4    1.8  1999    4    auto(l5)   f   18   29  p   \n",
+       "9         audi  a4 quattro    2.0  2008    4  manual(m6)   4   20   28  p   \n",
+       "\n",
+       "  category  \n",
+       "2  compact  \n",
+       "3  compact  \n",
+       "1  compact  \n",
+       "0  compact  \n",
+       "9  compact  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "---------"
+    "audi.sort_values('hwy', ascending=False).head()"
    ]
   },
   {
